@@ -4,16 +4,17 @@
 namespace LHAPDF {
 
 
-  /// Calculate alpha_s(Q2) by an analytic approximation
-  double AlphaS_Analytic::alphaS_Q2(double q2) {
-    // Get beta coeffs for the number of active (above threshold) quark flavours at energy Q
-    const int nf = _nf_Q2(q2);
-    const std::vector<double> beta = betas(nf);
-    const double beta02 = beta[0] * beta[0];
-    const double beta12 = beta[1] * beta[1];
+  // Calculate alpha_s(Q2) by an analytic approximation
+  double AlphaS_Analytic::alphasQ2(double q2) const {
+    /// Get the number of active flavours and corresponding LambdaQCD
+    /// @todo Also respect an explicit nfmax flag
+    const int nf = nf_Q2(q2);
+    const double lambdaQCD = (nf < 5) ? _lambda4 : _lambda5;
 
-    /// @todo Use both 4 and 5 flavour LambdaQCD definitions depending on m_b threshold
-    const double lambdaQCD = _lambda4;
+    // Get beta coeffs for the number of active (above threshold) quark flavours at energy Q
+    const std::vector<double> beta = betas(nf);
+    const double beta02 = sqr(beta[0]);
+    const double beta12 = sqr(beta[1]);
 
     // Pre-calculate ln(Q2/lambdaQCD) and expansion term y = 1/ln(Q2/lambdaQCD)
     const double x = q2 / lambdaQCD;
@@ -21,19 +22,22 @@ namespace LHAPDF {
     const double lnlnx = log(lnx);
     const double y = 1 / lnx;
 
-    // Calculate expansion terms Ay[a_0*y^0 - a_1*y^1 + By^2[a_20 + a_21 - a_22]] where a_ij are series coefficients
+    // Calculate and combine expansion terms Ay[a_0*y^0 - a_1*y^1 + By^2[a_20 + a_21 - a_22]]
+    // where a_ij are series coefficients. Avoid calculating more than is needed, although it's a bit messy.
     const double A = 4 * M_PI / beta[0];
     const double a_0 = 1;
-    const double a_1 = - 2 * beta[1] * lnlnx / beta02;
-    const double B = 4 * beta12 / (beta02 * beta02);
-    const double a_20 = (lnlnx - 0.5) * (lnlnx - 0.5);
-    const double a_21 = beta[2] * beta[0] / (8 * beta12);
-    const double a_22 = 5 / 4.0;
-
-    // Combine terms
     double tmp = a_0;
-    if (_order > 0) tmp -= a_1 * y;
-    if (_order > 1) tmp += B * y*y * (a_20 + a_21 - a_22);
+    if (_order > 0) {
+      const double a_1 = - 2 * beta[1] * lnlnx / beta02;
+      tmp -= a_1 * y;
+    }
+    if (_order > 1) {
+      const double B = 4 * beta12 / (beta02 * beta02);
+      const double a_20 = (lnlnx - 0.5) * (lnlnx - 0.5);
+      const double a_21 = beta[2] * beta[0] / (8 * beta12);
+      const double a_22 = 5 / 4.0;
+      tmp += B * y*y * (a_20 + a_21 - a_22);
+    }
     const double alphaS = A * y * tmp;
     return alphaS;
   }
