@@ -1,0 +1,14 @@
+#include "LHAPDF/AlphaS.h"
+#include "LHAPDF/Utils.h"
+
+namespace LHAPDF {
+
+
+  // Interpolate alpha_s from tabulated points in Q2 via metadata
+  double AlphaS_Ipol::alphasQ2(double q2) const {
+    /// @todo Implement interpolation-based alpha_s
+    return -1;
+  }
+
+
+}
